Bug 1554 - rect defined in XFixesInvertRegion is not used
Summary: rect defined in XFixesInvertRegion is not used
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Lib/other (show other bugs)
Version: unspecified
Hardware: x86 (IA32) All
: high normal
Assignee: Keith Packard
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-10-07 09:47 UTC by derek wang
Modified: 2006-09-27 19:05 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description derek wang 2004-10-07 09:47:30 UTC
The rect defined in XFixesInvertRegion is not passed to server, it may cause
server do nothing when clients invoke XFixesInvertRegion.
Comment 1 Roland Mainz 2004-11-04 23:50:50 UTC
keith:
Is it possible to make a patch in the next two weeks ? I'd like to see this
fixed for X11R6.8.2 if possible...
Comment 2 Keith Packard 2004-11-04 23:59:11 UTC
Yes, the fix is obvious enough.  Only a bit harder will be a test case to
demonstrate both the bug and the repair.
Comment 3 Alan Coopersmith 2006-09-27 19:05:45 UTC
This was still broken in Xorg modular git, so I've checked in the fix that Sun
has had in our copy for a couple of years:

commit 6c4d82990973b02a756ab3ba83ea345fed4bf87e
Author: Stuart Kreitman <stuart.kreitman@sun.com>
Date:   Wed Sep 27 19:02:02 2006 -0700

    Sun bug #5099413/Xorg bugzilla #1554: Gnopernicus full-screen mag not working
    
    Sun bug #5099413: Gnopernicus full-screen magnification not working
    <http://bugs.opensolaris.org/bugdatabase/view_bug.do?bug_id=5099413>
    
    includes fix for Xorg bug #1554: rect defined in XFixesInvertRegion is not used
    <https://bugs.freedesktop.org/show_bug.cgi?id=1554>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.