Sun bug #5099413/Xorg bugzilla #1554: Gnopernicus full-screen mag not working

Sun bug #5099413: Gnopernicus full-screen magnification not working
<http://bugs.opensolaris.org/bugdatabase/view_bug.do?bug_id=5099413>

includes fix for Xorg bug #1554: rect defined in XFixesInvertRegion is not used
<https://bugs.freedesktop.org/show_bug.cgi?id=1554>